--- a/index.html
+++ b/index.html
@@ -1521,6 +1521,427 @@
       </div>
     </section>
 
+    <!-- Student Testimonials Section -->
+    <section
+      class="py-16 px-4 bg-gradient-to-br from-primary to-blue-900 text-secondary"
+    >
+      <div class="max-w-6xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-4">
+          What Our Students Say
+        </h2>
+        <p class="text-center opacity-90 mb-12 max-w-2xl mx-auto">
+          Hear from current students and alumni about their experience with our
+          department
+        </p>
+
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Testimonial 1 -->
+          <div
+            class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20"
+          >
+            <div class="flex items-center mb-4">
+              <img
+                src="./assets/image1.jpg"
+                alt="Student"
+                class="w-12 h-12 rounded-full object-cover mr-4"
+              />
+              <div>
+                <h4 class="font-bold">Sarah Ahmed</h4>
+                <p class="text-sm opacity-80">4th Year, CSE</p>
+              </div>
+            </div>
+            <p class="text-sm opacity-90 italic">
+              "The faculty here are incredibly supportive and the research
+              opportunities are amazing. I've been able to work on cutting-edge
+              AI projects that will help me in my career."
+            </p>
+            <div class="flex mt-4">
+              <span class="text-secondary">★★★★★</span>
+            </div>
+          </div>
+
+          <!-- Testimonial 2 -->
+          <div
+            class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20"
+          >
+            <div class="flex items-center mb-4">
+              <img
+                src="./assets/image2.png"
+                alt="Student"
+                class="w-12 h-12 rounded-full object-cover mr-4"
+              />
+              <div>
+                <h4 class="font-bold">Rahman Khan</h4>
+                <p class="text-sm opacity-80">Alumni, 2023</p>
+              </div>
+            </div>
+            <p class="text-sm opacity-90 italic">
+              "The practical approach to learning here prepared me well for the
+              industry. I landed a job at a top tech company right after
+              graduation."
+            </p>
+            <div class="flex mt-4">
+              <span class="text-secondary">★★★★★</span>
+            </div>
+          </div>
+
+          <!-- Testimonial 3 -->
+          <div
+            class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20"
+          >
+            <div class="flex items-center mb-4">
+              <img
+                src="./assets/image4.png"
+                alt="Student"
+                class="w-12 h-12 rounded-full object-cover mr-4"
+              />
+              <div>
+                <h4 class="font-bold">Fatima Begum</h4>
+                <p class="text-sm opacity-80">MS Student</p>
+              </div>
+            </div>
+            <p class="text-sm opacity-90 italic">
+              "The research environment is excellent. My thesis supervisor
+              provides great guidance, and the lab facilities are
+              state-of-the-art."
+            </p>
+            <div class="flex mt-4">
+              <span class="text-secondary">★★★★★</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Upcoming Events & Workshops -->
+    <section class="py-16 px-4 bg-gray-50">
+      <div class="max-w-6xl mx-auto">
+        <h2 class="text-3xl font-bold text-primary text-center mb-4">
+          Upcoming Events & Workshops
+        </h2>
+        <p class="text-center text-gray-600 mb-12">
+          Join us for these exciting upcoming events
+        </p>
+
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Event 1 -->
+          <div
+            class="bg-white rounded-xl shadow-lg overflow-hidden border-l-4 border-secondary"
+          >
+            <div class="p-6">
+              <div class="flex items-center justify-between mb-4">
+                <span
+                  class="bg-secondary text-primary px-3 py-1 rounded-full text-sm font-bold"
+                  >Workshop</span
+                >
+                <span class="text-gray-500 text-sm">Aug 25, 2025</span>
+              </div>
+              <h3 class="text-xl font-bold text-primary mb-2">
+                AI & Machine Learning Workshop
+              </h3>
+              <p class="text-gray-600 mb-4 text-sm">
+                Learn the fundamentals of AI and ML with hands-on projects and
+                industry experts.
+              </p>
+              <div class="flex items-center text-sm text-gray-500 mb-2">
+                <svg
+                  class="w-4 h-4 mr-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                  ></path>
+                </svg>
+                10:00 AM - 4:00 PM
+              </div>
+              <div class="flex items-center text-sm text-gray-500 mb-4">
+                <svg
+                  class="w-4 h-4 mr-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+                  ></path>
+                </svg>
+                CSE Lab 1
+              </div>
+              <button
+                class="w-full bg-primary text-secondary py-2 rounded hover:bg-secondary hover:text-primary transition font-semibold"
+              >
+                Register Now
+              </button>
+            </div>
+          </div>
+
+          <!-- Event 2 -->
+          <div
+            class="bg-white rounded-xl shadow-lg overflow-hidden border-l-4 border-blue-500"
+          >
+            <div class="p-6">
+              <div class="flex items-center justify-between mb-4">
+                <span
+                  class="bg-blue-500 text-white px-3 py-1 rounded-full text-sm font-bold"
+                  >Seminar</span
+                >
+                <span class="text-gray-500 text-sm">Sep 1, 2025</span>
+              </div>
+              <h3 class="text-xl font-bold text-primary mb-2">
+                Student Project Showcase
+              </h3>
+              <p class="text-gray-600 mb-4 text-sm">
+                Final year students present their innovative projects and
+                research work.
+              </p>
+              <div class="flex items-center text-sm text-gray-500 mb-2">
+                <svg
+                  class="w-4 h-4 mr-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                  ></path>
+                </svg>
+                2:00 PM - 6:00 PM
+              </div>
+              <div class="flex items-center text-sm text-gray-500 mb-4">
+                <svg
+                  class="w-4 h-4 mr-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+                  ></path>
+                </svg>
+                Main Auditorium
+              </div>
+              <button
+                class="w-full bg-primary text-secondary py-2 rounded hover:bg-secondary hover:text-primary transition font-semibold"
+              >
+                Learn More
+              </button>
+            </div>
+          </div>
+
+          <!-- Event 3 -->
+          <div
+            class="bg-white rounded-xl shadow-lg overflow-hidden border-l-4 border-green-500"
+          >
+            <div class="p-6">
+              <div class="flex items-center justify-between mb-4">
+                <span
+                  class="bg-green-500 text-white px-3 py-1 rounded-full text-sm font-bold"
+                  >Career</span
+                >
+                <span class="text-gray-500 text-sm">Sep 15, 2025</span>
+              </div>
+              <h3 class="text-xl font-bold text-primary mb-2">
+                Industry Connect Session
+              </h3>
+              <p class="text-gray-600 mb-4 text-sm">
+                Meet with industry professionals and explore career
+                opportunities.
+              </p>
+              <div class="flex items-center text-sm text-gray-500 mb-2">
+                <svg
+                  class="w-4 h-4 mr-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                  ></path>
+                </svg>
+                11:00 AM - 3:00 PM
+              </div>
+              <div class="flex items-center text-sm text-gray-500 mb-4">
+                <svg
+                  class="w-4 h-4 mr-2"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+                  ></path>
+                </svg>
+                Conference Hall
+              </div>
+              <button
+                class="w-full bg-primary text-secondary py-2 rounded hover:bg-secondary hover:text-primary transition font-semibold"
+              >
+                Register Now
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center mt-8">
+          <a
+            href="events.html"
+            class="inline-block bg-primary text-secondary px-8 py-3 rounded-full hover:bg-secondary hover:text-primary transition font-semibold"
+          >
+            View All Events
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Alumni Success Stories -->
+    <section class="py-16 px-4 bg-white">
+      <div class="max-w-6xl mx-auto">
+        <h2 class="text-3xl font-bold text-primary text-center mb-4">
+          Alumni Success Stories
+        </h2>
+        <p class="text-center text-gray-600 mb-12">
+          Our graduates are making their mark in the tech industry worldwide
+        </p>
+
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Success Story 1 -->
+          <div
+            class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-xl p-6 border border-blue-200"
+          >
+            <div class="flex items-center mb-4">
+              <img
+                src="./assets/image1.jpg"
+                alt="Alumni"
+                class="w-16 h-16 rounded-full object-cover mr-4 border-2 border-blue-300"
+              />
+              <div>
+                <h4 class="font-bold text-primary">Md. Karim Rahman</h4>
+                <p class="text-sm text-blue-600">Software Engineer at Google</p>
+                <p class="text-xs text-gray-500">Batch 2020</p>
+              </div>
+            </div>
+            <p class="text-sm text-gray-700 mb-4">
+              "CSE-BU provided me with a strong foundation in computer science.
+              The practical projects and research experience helped me secure my
+              dream job at Google."
+            </p>
+            <div class="flex items-center justify-between">
+              <span class="text-blue-600 font-semibold">Mountain View, CA</span>
+              <svg
+                class="w-5 h-5 text-blue-500"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.18-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <!-- Success Story 2 -->
+          <div
+            class="bg-gradient-to-br from-green-50 to-green-100 rounded-xl p-6 border border-green-200"
+          >
+            <div class="flex items-center mb-4">
+              <img
+                src="./assets/image2.png"
+                alt="Alumni"
+                class="w-16 h-16 rounded-full object-cover mr-4 border-2 border-green-300"
+              />
+              <div>
+                <h4 class="font-bold text-primary">Fatima Akter</h4>
+                <p class="text-sm text-green-600">AI Research Scientist</p>
+                <p class="text-xs text-gray-500">Batch 2019</p>
+              </div>
+            </div>
+            <p class="text-sm text-gray-700 mb-4">
+              "The research opportunities at CSE-BU shaped my career in AI. I'm
+              now leading cutting-edge research in machine learning at a top AI
+              lab."
+            </p>
+            <div class="flex items-center justify-between">
+              <span class="text-green-600 font-semibold">MIT, Boston</span>
+              <svg
+                class="w-5 h-5 text-green-500"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <!-- Success Story 3 -->
+          <div
+            class="bg-gradient-to-br from-purple-50 to-purple-100 rounded-xl p-6 border border-purple-200"
+          >
+            <div class="flex items-center mb-4">
+              <img
+                src="./assets/image4.png"
+                alt="Alumni"
+                class="w-16 h-16 rounded-full object-cover mr-4 border-2 border-purple-300"
+              />
+              <div>
+                <h4 class="font-bold text-primary">Ahmed Hassan</h4>
+                <p class="text-sm text-purple-600">Tech Entrepreneur</p>
+                <p class="text-xs text-gray-500">Batch 2018</p>
+              </div>
+            </div>
+            <p class="text-sm text-gray-700 mb-4">
+              "CSE-BU taught me to think innovatively. I founded my own tech
+              startup that now serves thousands of customers across Bangladesh."
+            </p>
+            <div class="flex items-center justify-between">
+              <span class="text-purple-600 font-semibold"
+                >Dhaka, Bangladesh</span
+              >
+              <svg
+                class="w-5 h-5 text-purple-500"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center mt-8">
+          <a
+            href="students.html"
+            class="inline-block bg-primary text-secondary px-8 py-3 rounded-full hover:bg-secondary hover:text-primary transition font-semibold"
+          >
+            More Success Stories
+          </a>
+        </div>
+      </div>
+    </section>
+
     <!-- Professional Footer -->
     <footer
       class="w-full bg-primary text-secondary pt-12 pb-6 px-4 mt-12 border-t border-primary/30"
