--- a/contact.html
+++ b/contact.html
@@ -989,6 +989,494 @@
           </div>
         </div>
       </section>
+
+      <!-- Student Testimonials Section -->
+      <section
+        class="py-16 px-4 bg-gradient-to-br from-primary to-blue-900 text-secondary"
+      >
+        <div class="max-w-6xl mx-auto">
+          <h2 class="text-3xl font-bold text-center mb-4">
+            What Our Students Say
+          </h2>
+          <p class="text-center opacity-90 mb-12 max-w-2xl mx-auto">
+            Hear from current students and alumni about their experience with
+            our department
+          </p>
+
+          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Testimonial 1 -->
+            <div
+              class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20"
+            >
+              <div class="flex items-center mb-4">
+                <img
+                  src="./assets/image1.jpg"
+                  alt="Student"
+                  class="w-12 h-12 rounded-full object-cover mr-4"
+                />
+                <div>
+                  <h4 class="font-bold">Sarah Ahmed</h4>
+                  <p class="text-sm opacity-80">4th Year, CSE</p>
+                </div>
+              </div>
+              <p class="text-sm opacity-90 italic">
+                "The faculty here are incredibly supportive and the research
+                opportunities are amazing. I've been able to work on
+                cutting-edge AI projects that will help me in my career."
+              </p>
+              <div class="flex mt-4">
+                <span class="text-secondary">★★★★★</span>
+              </div>
+            </div>
+
+            <!-- Testimonial 2 -->
+            <div
+              class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20"
+            >
+              <div class="flex items-center mb-4">
+                <img
+                  src="./assets/image2.png"
+                  alt="Student"
+                  class="w-12 h-12 rounded-full object-cover mr-4"
+                />
+                <div>
+                  <h4 class="font-bold">Rahman Khan</h4>
+                  <p class="text-sm opacity-80">Alumni, 2023</p>
+                </div>
+              </div>
+              <p class="text-sm opacity-90 italic">
+                "The practical approach to learning here prepared me well for
+                the industry. I landed a job at a top tech company right after
+                graduation."
+              </p>
+              <div class="flex mt-4">
+                <span class="text-secondary">★★★★★</span>
+              </div>
+            </div>
+
+            <!-- Testimonial 3 -->
+            <div
+              class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20"
+            >
+              <div class="flex items-center mb-4">
+                <img
+                  src="./assets/image4.png"
+                  alt="Student"
+                  class="w-12 h-12 rounded-full object-cover mr-4"
+                />
+                <div>
+                  <h4 class="font-bold">Fatima Begum</h4>
+                  <p class="text-sm opacity-80">MS Student</p>
+                </div>
+              </div>
+              <p class="text-sm opacity-90 italic">
+                "The research environment is excellent. My thesis supervisor
+                provides great guidance, and the lab facilities are
+                state-of-the-art."
+              </p>
+              <div class="flex mt-4">
+                <span class="text-secondary">★★★★★</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Office Hours & Staff Directory -->
+      <section class="py-16 px-4 bg-white">
+        <div class="max-w-6xl mx-auto">
+          <h2 class="text-3xl font-bold text-primary text-center mb-12">
+            Office Hours & Staff Directory
+          </h2>
+
+          <div class="grid md:grid-cols-2 gap-12">
+            <!-- Office Hours -->
+            <div>
+              <h3
+                class="text-2xl font-bold text-primary mb-6 flex items-center"
+              >
+                <svg
+                  class="w-6 h-6 mr-3 text-secondary"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                  ></path>
+                </svg>
+                Office Hours
+              </h3>
+
+              <div class="space-y-4">
+                <div class="bg-gray-50 rounded-lg p-4">
+                  <h4 class="font-bold text-primary mb-2">Department Office</h4>
+                  <p class="text-gray-700">
+                    Sunday - Thursday: 9:00 AM - 5:00 PM
+                  </p>
+                  <p class="text-gray-700">Friday: 9:00 AM - 12:00 PM</p>
+                  <p class="text-gray-700">Saturday: Closed</p>
+                </div>
+
+                <div class="bg-gray-50 rounded-lg p-4">
+                  <h4 class="font-bold text-primary mb-2">
+                    Faculty Consultation
+                  </h4>
+                  <p class="text-gray-700">
+                    Sunday - Thursday: 2:00 PM - 4:00 PM
+                  </p>
+                  <p class="text-gray-700">Or by appointment</p>
+                </div>
+
+                <div class="bg-gray-50 rounded-lg p-4">
+                  <h4 class="font-bold text-primary mb-2">Lab Access</h4>
+                  <p class="text-gray-700">
+                    Sunday - Thursday: 8:00 AM - 6:00 PM
+                  </p>
+                  <p class="text-gray-700">Friday: 8:00 AM - 1:00 PM</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Key Staff -->
+            <div>
+              <h3
+                class="text-2xl font-bold text-primary mb-6 flex items-center"
+              >
+                <svg
+                  class="w-6 h-6 mr-3 text-secondary"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
+                  ></path>
+                </svg>
+                Key Staff Contacts
+              </h3>
+
+              <div class="space-y-4">
+                <div class="bg-gray-50 rounded-lg p-4">
+                  <h4 class="font-bold text-primary">Dr. Mohammad Rahman</h4>
+                  <p class="text-gray-600">Department Head</p>
+                  <p class="text-gray-700">📧 head@csebu.edu</p>
+                  <p class="text-gray-700">📞 +880-431-64020</p>
+                  <p class="text-gray-700">🏢 Room 501</p>
+                </div>
+
+                <div class="bg-gray-50 rounded-lg p-4">
+                  <h4 class="font-bold text-primary">Ms. Fatima Khatun</h4>
+                  <p class="text-gray-600">Administrative Officer</p>
+                  <p class="text-gray-700">📧 admin@csebu.edu</p>
+                  <p class="text-gray-700">📞 +880-431-64022</p>
+                  <p class="text-gray-700">🏢 Room 502</p>
+                </div>
+
+                <div class="bg-gray-50 rounded-lg p-4">
+                  <h4 class="font-bold text-primary">Mr. Ahmed Hassan</h4>
+                  <p class="text-gray-600">Lab Coordinator</p>
+                  <p class="text-gray-700">📧 lab@csebu.edu</p>
+                  <p class="text-gray-700">📞 +880-431-64023</p>
+                  <p class="text-gray-700">🏢 Room 515</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Emergency Contacts & Important Numbers -->
+      <section class="py-16 px-4 bg-red-50 border-l-4 border-red-500">
+        <div class="max-w-4xl mx-auto">
+          <h2
+            class="text-3xl font-bold text-red-700 text-center mb-4 flex items-center justify-center"
+          >
+            <svg
+              class="w-8 h-8 mr-3"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.082 15.5c-.77.833.192 2.5 1.732 2.5z"
+              ></path>
+            </svg>
+            Emergency Contacts
+          </h2>
+          <p class="text-center text-red-600 mb-8">
+            Important numbers for urgent situations
+          </p>
+
+          <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div
+              class="bg-white rounded-lg p-6 shadow-md text-center border-l-4 border-red-500"
+            >
+              <div class="text-red-500 text-2xl mb-2">🚨</div>
+              <h3 class="font-bold text-red-700 mb-2">Campus Security</h3>
+              <p class="text-red-600 font-mono text-lg">999</p>
+            </div>
+
+            <div
+              class="bg-white rounded-lg p-6 shadow-md text-center border-l-4 border-blue-500"
+            >
+              <div class="text-blue-500 text-2xl mb-2">🏥</div>
+              <h3 class="font-bold text-blue-700 mb-2">Medical Emergency</h3>
+              <p class="text-blue-600 font-mono text-lg">+880-431-64030</p>
+            </div>
+
+            <div
+              class="bg-white rounded-lg p-6 shadow-md text-center border-l-4 border-orange-500"
+            >
+              <div class="text-orange-500 text-2xl mb-2">🔧</div>
+              <h3 class="font-bold text-orange-700 mb-2">Technical Support</h3>
+              <p class="text-orange-600 font-mono text-lg">+880-431-64024</p>
+            </div>
+
+            <div
+              class="bg-white rounded-lg p-6 shadow-md text-center border-l-4 border-green-500"
+            >
+              <div class="text-green-500 text-2xl mb-2">📞</div>
+              <h3 class="font-bold text-green-700 mb-2">After Hours</h3>
+              <p class="text-green-600 font-mono text-lg">+880-1755-555999</p>
+            </div>
+          </div>
+
+          <div
+            class="mt-8 bg-yellow-100 border-l-4 border-yellow-500 p-4 rounded"
+          >
+            <div class="flex items-center">
+              <svg
+                class="w-5 h-5 text-yellow-500 mr-2"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                ></path>
+              </svg>
+              <p class="text-yellow-700 text-sm">
+                <strong>Note:</strong> For life-threatening emergencies, always
+                call 999 first. These numbers are for campus-related urgent
+                matters only.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Upcoming Events & Workshops -->
+      <section class="py-16 px-4 bg-gray-50">
+        <div class="max-w-6xl mx-auto">
+          <h2 class="text-3xl font-bold text-primary text-center mb-4">
+            Upcoming Events & Workshops
+          </h2>
+          <p class="text-center text-gray-600 mb-12">
+            Join us for these exciting upcoming events
+          </p>
+
+          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Event 1 -->
+            <div
+              class="bg-white rounded-xl shadow-lg overflow-hidden border-l-4 border-secondary"
+            >
+              <div class="p-6">
+                <div class="flex items-center justify-between mb-4">
+                  <span
+                    class="bg-secondary text-primary px-3 py-1 rounded-full text-sm font-bold"
+                    >Workshop</span
+                  >
+                  <span class="text-gray-500 text-sm">Aug 25, 2025</span>
+                </div>
+                <h3 class="text-xl font-bold text-primary mb-2">
+                  AI & Machine Learning Workshop
+                </h3>
+                <p class="text-gray-600 mb-4 text-sm">
+                  Learn the fundamentals of AI and ML with hands-on projects and
+                  industry experts.
+                </p>
+                <div class="flex items-center text-sm text-gray-500 mb-2">
+                  <svg
+                    class="w-4 h-4 mr-2"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                    ></path>
+                  </svg>
+                  10:00 AM - 4:00 PM
+                </div>
+                <div class="flex items-center text-sm text-gray-500 mb-4">
+                  <svg
+                    class="w-4 h-4 mr-2"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+                    ></path>
+                  </svg>
+                  CSE Lab 1
+                </div>
+                <button
+                  class="w-full bg-primary text-secondary py-2 rounded hover:bg-secondary hover:text-primary transition font-semibold"
+                >
+                  Register Now
+                </button>
+              </div>
+            </div>
+
+            <!-- Event 2 -->
+            <div
+              class="bg-white rounded-xl shadow-lg overflow-hidden border-l-4 border-blue-500"
+            >
+              <div class="p-6">
+                <div class="flex items-center justify-between mb-4">
+                  <span
+                    class="bg-blue-500 text-white px-3 py-1 rounded-full text-sm font-bold"
+                    >Seminar</span
+                  >
+                  <span class="text-gray-500 text-sm">Sep 1, 2025</span>
+                </div>
+                <h3 class="text-xl font-bold text-primary mb-2">
+                  Student Project Showcase
+                </h3>
+                <p class="text-gray-600 mb-4 text-sm">
+                  Final year students present their innovative projects and
+                  research work.
+                </p>
+                <div class="flex items-center text-sm text-gray-500 mb-2">
+                  <svg
+                    class="w-4 h-4 mr-2"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                    ></path>
+                  </svg>
+                  2:00 PM - 6:00 PM
+                </div>
+                <div class="flex items-center text-sm text-gray-500 mb-4">
+                  <svg
+                    class="w-4 h-4 mr-2"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+                    ></path>
+                  </svg>
+                  Main Auditorium
+                </div>
+                <button
+                  class="w-full bg-primary text-secondary py-2 rounded hover:bg-secondary hover:text-primary transition font-semibold"
+                >
+                  Learn More
+                </button>
+              </div>
+            </div>
+
+            <!-- Event 3 -->
+            <div
+              class="bg-white rounded-xl shadow-lg overflow-hidden border-l-4 border-green-500"
+            >
+              <div class="p-6">
+                <div class="flex items-center justify-between mb-4">
+                  <span
+                    class="bg-green-500 text-white px-3 py-1 rounded-full text-sm font-bold"
+                    >Career</span
+                  >
+                  <span class="text-gray-500 text-sm">Sep 15, 2025</span>
+                </div>
+                <h3 class="text-xl font-bold text-primary mb-2">
+                  Industry Connect Session
+                </h3>
+                <p class="text-gray-600 mb-4 text-sm">
+                  Meet with industry professionals and explore career
+                  opportunities.
+                </p>
+                <div class="flex items-center text-sm text-gray-500 mb-2">
+                  <svg
+                    class="w-4 h-4 mr-2"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                    ></path>
+                  </svg>
+                  11:00 AM - 3:00 PM
+                </div>
+                <div class="flex items-center text-sm text-gray-500 mb-4">
+                  <svg
+                    class="w-4 h-4 mr-2"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+                    ></path>
+                  </svg>
+                  Conference Hall
+                </div>
+                <button
+                  class="w-full bg-primary text-secondary py-2 rounded hover:bg-secondary hover:text-primary transition font-semibold"
+                >
+                  Register Now
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="text-center mt-8">
+            <a
+              href="events.html"
+              class="inline-block bg-primary text-secondary px-8 py-3 rounded-full hover:bg-secondary hover:text-primary transition font-semibold"
+            >
+              View All Events
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer
