--- a/about.html
+++ b/about.html
@@ -947,72 +947,6 @@
       <!-- Alumni Success Stories -->
       <section class="w-full bg-primary text-secondary py-16 px-4">
         <div class="max-w-6xl mx-auto">
-          <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">
-            Alumni Success Stories
-          </h2>
-
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
-            <!-- Alumni 1 -->
-            <div class="bg-secondary/10 rounded-lg p-6">
-              <div class="text-center mb-4">
-                <div
-                  class="w-20 h-20 bg-secondary rounded-full mx-auto mb-3 flex items-center justify-center"
-                >
-                  <span class="text-2xl text-primary font-bold">AH</span>
-                </div>
-                <h3 class="font-bold text-lg">Ahmed Hassan</h3>
-                <p class="text-secondary/80 text-sm">
-                  Batch 2019 • Software Engineer at Google
-                </p>
-              </div>
-              <p class="text-secondary/90 text-sm italic text-center">
-                "CSE-BU provided me with a strong foundation in algorithms and
-                problem-solving. The faculty's mentorship was instrumental in
-                landing my dream job at Google."
-              </p>
-            </div>
-
-            <!-- Alumni 2 -->
-            <div class="bg-secondary/10 rounded-lg p-6">
-              <div class="text-center mb-4">
-                <div
-                  class="w-20 h-20 bg-secondary rounded-full mx-auto mb-3 flex items-center justify-center"
-                >
-                  <span class="text-2xl text-primary font-bold">SJ</span>
-                </div>
-                <h3 class="font-bold text-lg">Samira Jahan</h3>
-                <p class="text-secondary/80 text-sm">
-                  Batch 2020 • AI Research Scientist at Microsoft
-                </p>
-              </div>
-              <p class="text-secondary/90 text-sm italic text-center">
-                "The research opportunities and supportive environment at CSE-BU
-                sparked my passion for AI research. Now I'm working on
-                cutting-edge machine learning projects."
-              </p>
-            </div>
-
-            <!-- Alumni 3 -->
-            <div class="bg-secondary/10 rounded-lg p-6">
-              <div class="text-center mb-4">
-                <div
-                  class="w-20 h-20 bg-secondary rounded-full mx-auto mb-3 flex items-center justify-center"
-                >
-                  <span class="text-2xl text-primary font-bold">RK</span>
-                </div>
-                <h3 class="font-bold text-lg">Rafiqul Karim</h3>
-                <p class="text-secondary/80 text-sm">
-                  Batch 2018 • Founder & CEO, TechStart BD
-                </p>
-              </div>
-              <p class="text-secondary/90 text-sm italic text-center">
-                "CSE-BU not only taught me programming but also
-                entrepreneurship. The innovation culture here inspired me to
-                start my own tech company."
-              </p>
-            </div>
-          </div>
-
           <!-- Alumni Statistics -->
           <div class="bg-secondary/10 rounded-lg p-8 text-center">
             <h3 class="text-2xl font-bold mb-6">
@@ -1049,7 +983,7 @@
             Department Leadership
           </h2>
 
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <div class="flex justify-center items-center gap-8 flex-wrap">
             <!-- Department Head -->
             <div class="bg-white rounded-lg shadow-lg p-6 text-center">
               <img
@@ -1063,50 +997,10 @@
               <p class="text-primary font-medium mb-2">
                 Chairman & Associate Professor
               </p>
-              <p class="text-gray-600 text-sm mb-3">
-                PhD in Computer Science, Machine Learning Expert
-              </p>
+
               <div class="space-y-1 text-xs text-gray-500">
                 <p>📧 chair_cse@bu.ac.bd</p>
                 <p>📞 01733977761</p>
-              </div>
-            </div>
-
-            <!-- Academic Coordinator -->
-            <div class="bg-white rounded-lg shadow-lg p-6 text-center">
-              <div
-                class="w-24 h-24 rounded-full mx-auto mb-4 bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center"
-              >
-                <span class="text-white text-2xl font-bold">MA</span>
-              </div>
-              <h3 class="font-bold text-lg text-primary">
-                Dr. Md Manjur Ahmed
-              </h3>
-              <p class="text-primary font-medium mb-2">Academic Coordinator</p>
-              <p class="text-gray-600 text-sm mb-3">
-                Associate Professor, Data Science Specialist
-              </p>
-              <div class="space-y-1 text-xs text-gray-500">
-                <p>📧 manjur@bu.ac.bd</p>
-                <p>🔬 Research: Big Data, AI</p>
-              </div>
-            </div>
-
-            <!-- Research Coordinator -->
-            <div class="bg-white rounded-lg shadow-lg p-6 text-center">
-              <div
-                class="w-24 h-24 rounded-full mx-auto mb-4 bg-gradient-to-br from-green-500 to-teal-600 flex items-center justify-center"
-              >
-                <span class="text-white text-2xl font-bold">MS</span>
-              </div>
-              <h3 class="font-bold text-lg text-primary">Md Samsuddoha</h3>
-              <p class="text-primary font-medium mb-2">Research Coordinator</p>
-              <p class="text-gray-600 text-sm mb-3">
-                Assistant Professor, AI & NLP Expert
-              </p>
-              <div class="space-y-1 text-xs text-gray-500">
-                <p>📧 msamsuddoha@bu.ac.bd</p>
-                <p>🔬 Research: LLM, Deep Learning</p>
               </div>
             </div>
           </div>
