--- a/faculty.html
+++ b/faculty.html
@@ -340,7 +340,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image2.png"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-26e471_584637209.jpg"
                 alt="Dr. Md Manjur Ahmed"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -367,7 +367,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image3.jpg"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-658a75_781761084.jpg"
                 alt="Md. Erfan"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -384,7 +384,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image4.png"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-075419_248249742.jpg"
                 alt="Md Mostafijur Rahman"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -408,7 +408,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image6.png"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-5652a9_627783683.jpg"
                 alt="Md Samsuddoha"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -434,7 +434,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image2.png"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-db89e0_737994158.jpg"
                 alt="Dr. Tania Islam"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -456,7 +456,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image1.jpg"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-0bc94e_367682905.jpg"
                 alt="Sohely Jahan"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -478,7 +478,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image3.jpg"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-6b92b1_730709608.jpg"
                 alt="Md. Rashid Al Asif"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -500,7 +500,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image4.png"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-03-12-cd260b_210955810.png"
                 alt="Md Mahbub E Noor"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -528,7 +528,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image4.png"
+                src="https://images.unsplash.com/photo-1719266716127-bf53e8f41f9c?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                 alt="Lecturer Example"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -557,7 +557,7 @@
               class="bg-white rounded-lg shadow p-4 flex flex-col items-center"
             >
               <img
-                src="./assets/image6.png"
+                src="https://images.unsplash.com/photo-1719266716127-bf53e8f41f9c?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                 alt="Adjunct Example"
                 class="w-24 h-24 rounded-full object-cover mb-3 border-2 border-secondary"
               />
@@ -1065,7 +1065,7 @@
           <div class="bg-white rounded-lg shadow p-6">
             <div class="flex items-center gap-3 mb-4">
               <img
-                src="./assets/image6.png"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-5652a9_627783683.jpg"
                 alt="Md Samsuddoha"
                 class="w-12 h-12 rounded-full object-cover"
               />
@@ -1102,7 +1102,7 @@
           <div class="bg-white rounded-lg shadow p-6">
             <div class="flex items-center gap-3 mb-4">
               <img
-                src="./assets/image2.png"
+                src="https://apps.piit.us/barishal-university/v2/uploads/teacher/staff/2025-02-25-26e471_584637209.jpg"
                 alt="Dr. Md Manjur Ahmed"
                 class="w-12 h-12 rounded-full object-cover"
               />
