--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
             </p>
           </div>
           <a
-            href="gallery.html"
+            href="#"
             class="inline-block mt-2 md:mt-0 bg-primary text-secondary font-semibold px-6 py-2 rounded shadow hover:bg-secondary hover:text-primary border-2 border-primary hover:border-secondary transition"
             >View Full Gallery</a
           >
@@ -1813,138 +1813,9 @@
       </div>
     </section>
 
-    <!-- Alumni Success Stories -->
-    <section class="py-16 px-4 bg-white">
-      <div class="max-w-6xl mx-auto">
-        <h2 class="text-3xl font-bold text-primary text-center mb-4">
-          Alumni Success Stories
-        </h2>
-        <p class="text-center text-gray-600 mb-12">
-          Our graduates are making their mark in the tech industry worldwide
-        </p>
-
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Success Story 1 -->
-          <div
-            class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-xl p-6 border border-blue-200"
-          >
-            <div class="flex items-center mb-4">
-              <img
-                src="./assets/image1.jpg"
-                alt="Alumni"
-                class="w-16 h-16 rounded-full object-cover mr-4 border-2 border-blue-300"
-              />
-              <div>
-                <h4 class="font-bold text-primary">Md. Karim Rahman</h4>
-                <p class="text-sm text-blue-600">Software Engineer at Google</p>
-                <p class="text-xs text-gray-500">Batch 2020</p>
-              </div>
-            </div>
-            <p class="text-sm text-gray-700 mb-4">
-              "CSE-BU provided me with a strong foundation in computer science.
-              The practical projects and research experience helped me secure my
-              dream job at Google."
-            </p>
-            <div class="flex items-center justify-between">
-              <span class="text-blue-600 font-semibold">Mountain View, CA</span>
-              <svg
-                class="w-5 h-5 text-blue-500"
-                fill="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.18-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z"
-                />
-              </svg>
-            </div>
-          </div>
-
-          <!-- Success Story 2 -->
-          <div
-            class="bg-gradient-to-br from-green-50 to-green-100 rounded-xl p-6 border border-green-200"
-          >
-            <div class="flex items-center mb-4">
-              <img
-                src="./assets/image2.png"
-                alt="Alumni"
-                class="w-16 h-16 rounded-full object-cover mr-4 border-2 border-green-300"
-              />
-              <div>
-                <h4 class="font-bold text-primary">Fatima Akter</h4>
-                <p class="text-sm text-green-600">AI Research Scientist</p>
-                <p class="text-xs text-gray-500">Batch 2019</p>
-              </div>
-            </div>
-            <p class="text-sm text-gray-700 mb-4">
-              "The research opportunities at CSE-BU shaped my career in AI. I'm
-              now leading cutting-edge research in machine learning at a top AI
-              lab."
-            </p>
-            <div class="flex items-center justify-between">
-              <span class="text-green-600 font-semibold">MIT, Boston</span>
-              <svg
-                class="w-5 h-5 text-green-500"
-                fill="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
-                />
-              </svg>
-            </div>
-          </div>
-
-          <!-- Success Story 3 -->
-          <div
-            class="bg-gradient-to-br from-purple-50 to-purple-100 rounded-xl p-6 border border-purple-200"
-          >
-            <div class="flex items-center mb-4">
-              <img
-                src="./assets/image4.png"
-                alt="Alumni"
-                class="w-16 h-16 rounded-full object-cover mr-4 border-2 border-purple-300"
-              />
-              <div>
-                <h4 class="font-bold text-primary">Ahmed Hassan</h4>
-                <p class="text-sm text-purple-600">Tech Entrepreneur</p>
-                <p class="text-xs text-gray-500">Batch 2018</p>
-              </div>
-            </div>
-            <p class="text-sm text-gray-700 mb-4">
-              "CSE-BU taught me to think innovatively. I founded my own tech
-              startup that now serves thousands of customers across Bangladesh."
-            </p>
-            <div class="flex items-center justify-between">
-              <span class="text-purple-600 font-semibold"
-                >Dhaka, Bangladesh</span
-              >
-              <svg
-                class="w-5 h-5 text-purple-500"
-                fill="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
-                />
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="text-center mt-8">
-          <a
-            href="students.html"
-            class="inline-block bg-primary text-secondary px-8 py-3 rounded-full hover:bg-secondary hover:text-primary transition font-semibold"
-          >
-            More Success Stories
-          </a>
-        </div>
-      </div>
-    </section>
-
     <!-- Professional Footer -->
     <footer
-      class="w-full bg-primary text-secondary pt-12 pb-6 px-4 mt-12 border-t border-primary/30"
+      class="w-full bg-primary text-secondary pt-12 pb-6 px-4 border-t border-primary/30"
     >
       <div
         class="max-w-7xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-8 sm:gap-10 md:gap-8"
